tests/pass/divolvi_in_inisiu.kr
// A bare 'divolvi;' inside inisiu must lower to 'ret i32 0' in main.
fn inisiu() {
    nter x = 1;
    si x == 1 {
        mostran("early exit");
        divolvi;
    }
    mostran("not reached");
}
