tests/fail/fail_inisiu_with_return_type.kr
fn inisiu() nter {
    divolvi 0;
}
